employee save and update bug fixing